--- a/templates/prostages/index.html.twig
+++ b/templates/prostages/index.html.twig
@@ -1,5 +1,16 @@
+{% extends 'base.html.twig' %} 
+
+{% block body %}
 <h1> Bienvenue sur la page d'accueil de ProStages </h1>
 
 <p>
 C'est ici seront les ressources
 </p>
+
+{% endblock %}
+
+
+
+
+
+
