--- a/templates/prostages/stage.html.twig
+++ b/templates/prostages/stage.html.twig
@@ -1,5 +1,9 @@
+{% extends 'base.html.twig' %}
+
+{% block body %}
 <h1> Cette page affichera le descriptif du stage ayant pour identifiant id </h1>
 
 <p>
 C'est ici seront les stages
 </p>
+{% endblock %}
