--- a/templates/prostages/stage.html.twig
+++ b/templates/prostages/stage.html.twig
@@ -1,9 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-<h1> Cette page affichera le descriptif du stage ayant pour identifiant id </h1>
+{%block title%} PROSTAGES - Stage n°{%endblock%}
 
-<p>
-C'est ici seront les stages
-</p>
-{% endblock %}
+{%block contenu%}
+	<div class="row">
+		<!-- OFFRE DE STAGE-->
+		<div class="col-md-8 col-sm-12">
+		Formations <br>
+		
+		Description <br> <br>
+		
+		sdfgrethdzqlkrfjgvs, ôzlqfd,vs qzsogdrm
+	</div>
+	
+	<!-- INFORMATION DE L'ENTREPRISE-->
+	<div class="col-md-4 col-sm-12">
+		Entreprise <br>
+		Nom <br>
+		Adresse <br>
+	</div>
+	
+	</div>
+
+
+{%endblock%}
