--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,28 +1,59 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}ProStage{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
+<!DOCTYPE HTML>
+<html lang="fr">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	
-    <body>
-        {% block slider %}
-		<h1>--------------SLIDER------------</h1>
-		{% endblock %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet"
+	href ="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link rel="stylesheet" href="monCSS.css"/>
+	
+    <!--ONGLET-->
+	<title>{%block title%} PROSTAGES - {%endblock%} </title>
+  </head>
+  
+  <body>
+	<div class="container">
+	
+		<!-- HEADER -->
+		{%block header%}
+	<div class="row">
+			<div class="col-md-12">
+			<h3>
+				<CENTER>PROSTAGES</center>
+			</h3>
+			</div>
+	</div>
+		{%endblock%}
 		
-		{% block menu %}
-		<h1>--------------MENU------------</h1>
-		{% endblock %}
-		
-		{% block contenu %}
-		{% endblock %}
-		
-		{% block footer %}
-		<h1>--------------FOOTER------------</h1>
-		{% endblock %}
-		
-        {% block javascripts %}
-		{% endblock %}
-    </body>
+		<!-- 3 BOUTONS DE NAVIGATION -->
+	{%block nav%}
+	<div class="row">
+		<ul class="nav justify-content-center">
+			<li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="#">Entreprise</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Stage</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Aucun filtre</a>
+			</li>
+		</ul>
+	</div>
+	{%endblock%}
+	
+		<!-- CONTENU -->
+	{%block contenu%}
+	<div class="row">	
+			<div class="col-12">
+			{%block contenuC%} {%endblock%}
+	</div>
+	{%endblock%}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+	
+  </body>
 </html>
